rolled back to javax

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
 
     <properties>
-        <jakarta.mail.version>2.0.1</jakarta.mail.version>
+        <javax.mail.version>1.6.2</javax.mail.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -46,10 +46,9 @@
 
         <dependency>
             <groupId>com.sun.mail</groupId>
-            <artifactId>jakarta.mail</artifactId>
-            <version>${jakarta.mail.version}</version>
+            <artifactId>javax.mail</artifactId>
+            <version>${javax.mail.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
